// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt should format correctly with settings: C1-Default: C1-Default 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: duckcreek-sample.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt should format correctly with settings: C1-Default: C1-Default 1`] = `
"> [!slack]+ Message from :big-bless-1-0::big-bless-1-1:
> **Time:** 8:04
> big bless
> Custom response
> 
> Slackbot
>   8:04 PM
> :big-bless-0-0::big-bless-0-1:
> :big-bless-1-0::big-bless-1-1:
> 
> User8
>   11:38 AM
> is there any way to get a dump of all our emojis names, for better searching?
> 
> 4 replies
> Last reply 1 month agoView thread
> 
> User9
>   1:58 AM
> Does anyone have the template for :everythings_fine_parrot: where I can replace the parrot?
> :subscribe:
> 1
> :bufo-worried-doctor:
> 1
> 
> User10
>   2:59 PM
> I need an emoji for :bufo-closed-the-tab-with-his-hubble-results:
> :bufo-takes-hubble:
> 6
> 
> 3 replies
> Last reply 1 month agoView thread
> 
> User11
>   1:07 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> X (formerly Twitter)X (formerly Twitter)
> Notion (@NotionHQ) on X
> Last year we launched custom emojis in Notion :chefs-kiss:
> But how do you add 1.5M custom emojis to a workspace without breaking everything? :thinking_face: (91 kB)
> https://x.com/NotionHQ/status/1886846711198572605
> 
> :future-bufos:
> 4
> :copy_that:
> 1
> 
> 9+
> 28 replies
> Last reply 12 days agoView thread
> 
> User12
> :ooo:  6:22 PM
> went to reference the anikan princess leia meme and I was extremely disappointed we don't have a princess leia emoji… I thought we were nerds people :laughing: :starwars2:
> :be-the-emoji-you-want-to-see:
> 1
> :right-meme:
> 9
> :r1-blurple:
> 1
> 
> 9 replies
> Last reply 1 month agoView thread
> 
> User13
>   6:18 AM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> does anyone know which bufo is this? :laughing:
> image.png
>  
> image.png
> 
> :bufo-ages-rapidly-in-the-void:
> 18
> 
> View newer replies
> 
> User14
>   12:11 PM
> What in the Slack incident is happening …
> image.png
>  
> image.png
> 
> :bufo-offers-eyes-but-the-provenance-is-disconcerting:
> 4
> :blob-hug-broken-image:
> 2
> :blob-hug-broken-image-r:
> 1
> :bufo-waves-a-fish-around-because-this-smells-fishy-and-he-doesnt-want-his-message-to-be-misconstrued:
> 1
> :thedonutholehasaholeinitscenteritsnotadonutholebutasmallerdonutwithitsownholeourdonutisnotwholeatall:
> 1
> :somebodyoncetoldmetheworldwasgonnarollmeiaintthesharpesttoolintheshedshewaslookingkindofdumbwithherf:
> 1
> :bufo寿限無寿限無五劫の擦り切れ海砂利水魚の水行末雲来末風来末食う寝る処に住む処やぶら小路の藪柑子パイポパイポパイポのシューリンガンシューリンガンのグーリンダイグーリンダイのポンポコピーのポンポコナ:
> 2
> 
> 4 replies
> Last reply 30 days agoView thread
> 
> User15
>   1:58 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> the github one has bufos that we don't have! https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> bufo-intern.png
> [knobiknows/all-the-bufo](https://github.com/knobiknows/all-the-bufo)knobiknows/all-the-bufo | Added by GitHub (23 kB)
> https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> 
> View newer replies
> 
> User16
> :connect-fingerguns:  3:59 PM
> Emojiteam can we remove this? For photosensitivity :thread:
> 
> +1
> 11 replies
> Last reply 24 days agoView thread
> 
> User17
>   3:04 PM
> wtb :bufo-cheerleader: / :bufo-cheers-you-on: which is like :bufo-excite:  or :doodle-bufo-yay: but with pompoms (animation optional)
> :bufo-cheerleader:
> 6
> 
> 1 reply
> 22 days agoView thread
> 
> User18
> :no-dms:  1:28 PM
> :hide-the-pain-bufo: is so cursed
> :cursed:
> 9
> :blursed:
> 4
> :yikes-harold:
> 5
> :lolol:
> 3
> 
> 3 replies
> Last reply 18 days agoView thread
> 
> User19
>   2:20 PM
> wtb :private-channel: to use when someone has linked to a private channel you're not in (see screenshot from Slack)
> 
> 7 replies
> Last reply 12 days agoView thread
> 
> User20
>   3:43 PM
> Hi Team
> Is there a table in hubble where I can check who created a emoji? Any help would be appreciated :)
> 
> 5 replies
> Last reply 12 days agoView thread
> 
> User21
>   8:28 PM
> wtb :bufo-eating-ortolan:
> :big-yikes:
> 3
> :bufo-blanket:
> 1
> :fancy-bufo:
> 2
> :bufo-eats-his-son-like-popcorn:
> 2
> :bufo-what-have-you-done:
> 1
> :wait-thats-illegal:
> 1
> 
> 2 replies
> Last reply 10 days agoView thread
> 
> User14
>   6:57 PM
> From a fresh Slack instance. It's no way to live.
> Image from iOS
>  
> Image from iOS
> 
> :nice:
> 5
> :nice2:
> 8
> :nice3:
> 5
> 👍
> 7
> :nice4:
> 5
> :nice7:
> 5
> :nice6:
> 5
> :nice-1:
> 5
> :nice-brat:
> 5
> :nice-icon:
> 5
> :nice-100:
> 5
> :nice-colors:
> 6
> :nice-nice:
> 5
> :n_ice:
> 5
> :nice-blurple:
> 5
> :nice_i_guess2:
> 5
> :haha-nice:
> 5
> :small-nice:
> 5
> :super-nice:
> 5
> :nice-in-swedish:
> 5
> :party-nice:
> 4
> :double-nice:
> 4
> 
> User22
>   2:24 PM
> :wave: I'm looking for help removing a reactji, specifically looking to retire jira-archreview-ask :jira-archreview-ask: since that forum is deprecated. I cleaned up the go/askbot-sheet to remove the behavior, but the emoji is owned by a former Stripe.
> 
> 1 reply
> 3 days agoView thread
> 
> User19
>   10:25 AM
> wtb :double-ty: (:ty::ty:)
> :double-ty:
> 7
> 
> 11 replies
> Last reply 19 hours ago"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `
"> [!slack]+ Message from :big-bless-1-0::big-bless-1-1:
> **Time:** 8:04
> big bless
> Custom response
> 
> Slackbot
>   8:04 PM
> :big-bless-0-0::big-bless-0-1:
> :big-bless-1-0::big-bless-1-1:
> 
> User8
>   11:38 AM
> is there any way to get a dump of all our emojis names, for better searching?
> 
> 4 replies
> Last reply 1 month agoView thread
> 
> User9
>   1:58 AM
> Does anyone have the template for :everythings_fine_parrot: where I can replace the parrot?
> :subscribe:
> 1
> :bufo-worried-doctor:
> 1
> 
> User10
>   2:59 PM
> I need an emoji for :bufo-closed-the-tab-with-his-hubble-results:
> :bufo-takes-hubble:
> 6
> 
> 3 replies
> Last reply 1 month agoView thread
> 
> User11
>   1:07 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> X (formerly Twitter)X (formerly Twitter)
> Notion (@NotionHQ) on X
> Last year we launched custom emojis in Notion :chefs-kiss:
> But how do you add 1.5M custom emojis to a workspace without breaking everything? :thinking_face: (91 kB)
> https://x.com/NotionHQ/status/1886846711198572605
> 
> :future-bufos:
> 4
> :copy_that:
> 1
> 
> 9+
> 28 replies
> Last reply 12 days agoView thread
> 
> User12
> :ooo:  6:22 PM
> went to reference the anikan princess leia meme and I was extremely disappointed we don't have a princess leia emoji… I thought we were nerds people :laughing: :starwars2:
> :be-the-emoji-you-want-to-see:
> 1
> :right-meme:
> 9
> :r1-blurple:
> 1
> 
> 9 replies
> Last reply 1 month agoView thread
> 
> User13
>   6:18 AM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> does anyone know which bufo is this? :laughing:
> image.png
>  
> image.png
> 
> :bufo-ages-rapidly-in-the-void:
> 18
> 
> View newer replies
> 
> User14
>   12:11 PM
> What in the Slack incident is happening …
> image.png
>  
> image.png
> 
> :bufo-offers-eyes-but-the-provenance-is-disconcerting:
> 4
> :blob-hug-broken-image:
> 2
> :blob-hug-broken-image-r:
> 1
> :bufo-waves-a-fish-around-because-this-smells-fishy-and-he-doesnt-want-his-message-to-be-misconstrued:
> 1
> :thedonutholehasaholeinitscenteritsnotadonutholebutasmallerdonutwithitsownholeourdonutisnotwholeatall:
> 1
> :somebodyoncetoldmetheworldwasgonnarollmeiaintthesharpesttoolintheshedshewaslookingkindofdumbwithherf:
> 1
> :bufo寿限無寿限無五劫の擦り切れ海砂利水魚の水行末雲来末風来末食う寝る処に住む処やぶら小路の藪柑子パイポパイポパイポのシューリンガンシューリンガンのグーリンダイグーリンダイのポンポコピーのポンポコナ:
> 2
> 
> 4 replies
> Last reply 30 days agoView thread
> 
> User15
>   1:58 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> the github one has bufos that we don't have! https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> bufo-intern.png
> [knobiknows/all-the-bufo](https://github.com/knobiknows/all-the-bufo)knobiknows/all-the-bufo | Added by GitHub (23 kB)
> https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> 
> View newer replies
> 
> User16
> :connect-fingerguns:  3:59 PM
> Emojiteam can we remove this? For photosensitivity :thread:
> 
> +1
> 11 replies
> Last reply 24 days agoView thread
> 
> User17
>   3:04 PM
> wtb :bufo-cheerleader: / :bufo-cheers-you-on: which is like :bufo-excite:  or :doodle-bufo-yay: but with pompoms (animation optional)
> :bufo-cheerleader:
> 6
> 
> 1 reply
> 22 days agoView thread
> 
> User18
> :no-dms:  1:28 PM
> :hide-the-pain-bufo: is so cursed
> :cursed:
> 9
> :blursed:
> 4
> :yikes-harold:
> 5
> :lolol:
> 3
> 
> 3 replies
> Last reply 18 days agoView thread
> 
> User19
>   2:20 PM
> wtb :private-channel: to use when someone has linked to a private channel you're not in (see screenshot from Slack)
> 
> 7 replies
> Last reply 12 days agoView thread
> 
> User20
>   3:43 PM
> Hi Team
> Is there a table in hubble where I can check who created a emoji? Any help would be appreciated :)
> 
> 5 replies
> Last reply 12 days agoView thread
> 
> User21
>   8:28 PM
> wtb :bufo-eating-ortolan:
> :big-yikes:
> 3
> :bufo-blanket:
> 1
> :fancy-bufo:
> 2
> :bufo-eats-his-son-like-popcorn:
> 2
> :bufo-what-have-you-done:
> 1
> :wait-thats-illegal:
> 1
> 
> 2 replies
> Last reply 10 days agoView thread
> 
> User14
>   6:57 PM
> From a fresh Slack instance. It's no way to live.
> Image from iOS
>  
> Image from iOS
> 
> :nice:
> 5
> :nice2:
> 8
> :nice3:
> 5
> 👍
> 7
> :nice4:
> 5
> :nice7:
> 5
> :nice6:
> 5
> :nice-1:
> 5
> :nice-brat:
> 5
> :nice-icon:
> 5
> :nice-100:
> 5
> :nice-colors:
> 6
> :nice-nice:
> 5
> :n_ice:
> 5
> :nice-blurple:
> 5
> :nice_i_guess2:
> 5
> :haha-nice:
> 5
> :small-nice:
> 5
> :super-nice:
> 5
> :nice-in-swedish:
> 5
> :party-nice:
> 4
> :double-nice:
> 4
> 
> User22
>   2:24 PM
> :wave: I'm looking for help removing a reactji, specifically looking to retire jira-archreview-ask :jira-archreview-ask: since that forum is deprecated. I cleaned up the go/askbot-sheet to remove the behavior, but the emoji is owned by a former Stripe.
> 
> 1 reply
> 3 days agoView thread
> 
> User19
>   10:25 AM
> wtb :double-ty: (:ty::ty:)
> :double-ty:
> 7
> 
> 11 replies
> Last reply 19 hours ago"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `
"> [!slack]+ Message from :big-bless-1-0::big-bless-1-1:
> **Time:** 8:04
> big bless
> Custom response
> 
> Slackbot
>   8:04 PM
> :big-bless-0-0::big-bless-0-1:
> :big-bless-1-0::big-bless-1-1:
> 
> User8
>   11:38 AM
> is there any way to get a dump of all our emojis names, for better searching?
> 
> 4 replies
> Last reply 1 month agoView thread
> 
> User9
>   1:58 AM
> Does anyone have the template for :everythings_fine_parrot: where I can replace the parrot?
> :subscribe:
> 1
> :bufo-worried-doctor:
> 1
> 
> User10
>   2:59 PM
> I need an emoji for :bufo-closed-the-tab-with-his-hubble-results:
> :bufo-takes-hubble:
> 6
> 
> 3 replies
> Last reply 1 month agoView thread
> 
> User11
>   1:07 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> X (formerly Twitter)X (formerly Twitter)
> Notion (@NotionHQ) on X
> Last year we launched custom emojis in Notion :chefs-kiss:
> But how do you add 1.5M custom emojis to a workspace without breaking everything? :thinking_face: (91 kB)
> https://x.com/NotionHQ/status/1886846711198572605
> 
> :future-bufos:
> 4
> :copy_that:
> 1
> 
> 9+
> 28 replies
> Last reply 12 days agoView thread
> 
> User12
> :ooo:  6:22 PM
> went to reference the anikan princess leia meme and I was extremely disappointed we don't have a princess leia emoji… I thought we were nerds people :laughing: :starwars2:
> :be-the-emoji-you-want-to-see:
> 1
> :right-meme:
> 9
> :r1-blurple:
> 1
> 
> 9 replies
> Last reply 1 month agoView thread
> 
> User13
>   6:18 AM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> does anyone know which bufo is this? :laughing:
> image.png
>  
> image.png
> 
> :bufo-ages-rapidly-in-the-void:
> 18
> 
> View newer replies
> 
> User14
>   12:11 PM
> What in the Slack incident is happening …
> image.png
>  
> image.png
> 
> :bufo-offers-eyes-but-the-provenance-is-disconcerting:
> 4
> :blob-hug-broken-image:
> 2
> :blob-hug-broken-image-r:
> 1
> :bufo-waves-a-fish-around-because-this-smells-fishy-and-he-doesnt-want-his-message-to-be-misconstrued:
> 1
> :thedonutholehasaholeinitscenteritsnotadonutholebutasmallerdonutwithitsownholeourdonutisnotwholeatall:
> 1
> :somebodyoncetoldmetheworldwasgonnarollmeiaintthesharpesttoolintheshedshewaslookingkindofdumbwithherf:
> 1
> :bufo寿限無寿限無五劫の擦り切れ海砂利水魚の水行末雲来末風来末食う寝る処に住む処やぶら小路の藪柑子パイポパイポパイポのシューリンガンシューリンガンのグーリンダイグーリンダイのポンポコピーのポンポコナ:
> 2
> 
> 4 replies
> Last reply 30 days agoView thread
> 
> User15
>   1:58 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> the github one has bufos that we don't have! https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> bufo-intern.png
> [knobiknows/all-the-bufo](https://github.com/knobiknows/all-the-bufo)knobiknows/all-the-bufo | Added by GitHub (23 kB)
> https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> 
> View newer replies
> 
> User16
> :connect-fingerguns:  3:59 PM
> Emojiteam can we remove this? For photosensitivity :thread:
> 
> +1
> 11 replies
> Last reply 24 days agoView thread
> 
> User17
>   3:04 PM
> wtb :bufo-cheerleader: / :bufo-cheers-you-on: which is like :bufo-excite:  or :doodle-bufo-yay: but with pompoms (animation optional)
> :bufo-cheerleader:
> 6
> 
> 1 reply
> 22 days agoView thread
> 
> User18
> :no-dms:  1:28 PM
> :hide-the-pain-bufo: is so cursed
> :cursed:
> 9
> :blursed:
> 4
> :yikes-harold:
> 5
> :lolol:
> 3
> 
> 3 replies
> Last reply 18 days agoView thread
> 
> User19
>   2:20 PM
> wtb :private-channel: to use when someone has linked to a private channel you're not in (see screenshot from Slack)
> 
> 7 replies
> Last reply 12 days agoView thread
> 
> User20
>   3:43 PM
> Hi Team
> Is there a table in hubble where I can check who created a emoji? Any help would be appreciated :)
> 
> 5 replies
> Last reply 12 days agoView thread
> 
> User21
>   8:28 PM
> wtb :bufo-eating-ortolan:
> :big-yikes:
> 3
> :bufo-blanket:
> 1
> :fancy-bufo:
> 2
> :bufo-eats-his-son-like-popcorn:
> 2
> :bufo-what-have-you-done:
> 1
> :wait-thats-illegal:
> 1
> 
> 2 replies
> Last reply 10 days agoView thread
> 
> User14
>   6:57 PM
> From a fresh Slack instance. It's no way to live.
> Image from iOS
>  
> Image from iOS
> 
> :nice:
> 5
> :nice2:
> 8
> :nice3:
> 5
> 👍
> 7
> :nice4:
> 5
> :nice7:
> 5
> :nice6:
> 5
> :nice-1:
> 5
> :nice-brat:
> 5
> :nice-icon:
> 5
> :nice-100:
> 5
> :nice-colors:
> 6
> :nice-nice:
> 5
> :n_ice:
> 5
> :nice-blurple:
> 5
> :nice_i_guess2:
> 5
> :haha-nice:
> 5
> :small-nice:
> 5
> :super-nice:
> 5
> :nice-in-swedish:
> 5
> :party-nice:
> 4
> :double-nice:
> 4
> 
> User22
>   2:24 PM
> :wave: I'm looking for help removing a reactji, specifically looking to retire jira-archreview-ask :jira-archreview-ask: since that forum is deprecated. I cleaned up the go/askbot-sheet to remove the behavior, but the emoji is owned by a former Stripe.
> 
> 1 reply
> 3 days agoView thread
> 
> User19
>   10:25 AM
> wtb :double-ty: (:ty::ty:)
> :double-ty:
> 7
> 
> 11 replies
> Last reply 19 hours ago"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: emoji-channel-sample.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `
"> [!slack]+ Message from :big-bless-1-0::big-bless-1-1:
> **Time:** 8:04
> big bless
> Custom response
> 
> Slackbot
>   8:04 PM
> :big-bless-0-0::big-bless-0-1:
> :big-bless-1-0::big-bless-1-1:
> 
> User8
>   11:38 AM
> is there any way to get a dump of all our emojis names, for better searching?
> 
> 4 replies
> Last reply 1 month agoView thread
> 
> User9
>   1:58 AM
> Does anyone have the template for :everythings_fine_parrot: where I can replace the parrot?
> :subscribe:
> 1
> :bufo-worried-doctor:
> 1
> 
> User10
>   2:59 PM
> I need an emoji for :bufo-closed-the-tab-with-his-hubble-results:
> :bufo-takes-hubble:
> 6
> 
> 3 replies
> Last reply 1 month agoView thread
> 
> User11
>   1:07 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> X (formerly Twitter)X (formerly Twitter)
> Notion (@NotionHQ) on X
> Last year we launched custom emojis in Notion :chefs-kiss:
> But how do you add 1.5M custom emojis to a workspace without breaking everything? :thinking_face: (91 kB)
> https://x.com/NotionHQ/status/1886846711198572605
> 
> :future-bufos:
> 4
> :copy_that:
> 1
> 
> 9+
> 28 replies
> Last reply 12 days agoView thread
> 
> User12
> :ooo:  6:22 PM
> went to reference the anikan princess leia meme and I was extremely disappointed we don't have a princess leia emoji… I thought we were nerds people :laughing: :starwars2:
> :be-the-emoji-you-want-to-see:
> 1
> :right-meme:
> 9
> :r1-blurple:
> 1
> 
> 9 replies
> Last reply 1 month agoView thread
> 
> User13
>   6:18 AM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> does anyone know which bufo is this? :laughing:
> image.png
>  
> image.png
> 
> :bufo-ages-rapidly-in-the-void:
> 18
> 
> View newer replies
> 
> User14
>   12:11 PM
> What in the Slack incident is happening …
> image.png
>  
> image.png
> 
> :bufo-offers-eyes-but-the-provenance-is-disconcerting:
> 4
> :blob-hug-broken-image:
> 2
> :blob-hug-broken-image-r:
> 1
> :bufo-waves-a-fish-around-because-this-smells-fishy-and-he-doesnt-want-his-message-to-be-misconstrued:
> 1
> :thedonutholehasaholeinitscenteritsnotadonutholebutasmallerdonutwithitsownholeourdonutisnotwholeatall:
> 1
> :somebodyoncetoldmetheworldwasgonnarollmeiaintthesharpesttoolintheshedshewaslookingkindofdumbwithherf:
> 1
> :bufo寿限無寿限無五劫の擦り切れ海砂利水魚の水行末雲来末風来末食う寝る処に住む処やぶら小路の藪柑子パイポパイポパイポのシューリンガンシューリンガンのグーリンダイグーリンダイのポンポコピーのポンポコナ:
> 2
> 
> 4 replies
> Last reply 30 days agoView thread
> 
> User15
>   1:58 PM
> Has anyone studied bufo's migration? as I understand it many ex-stripes spread bufo to OpenAI, and Notion… where else?
> the github one has bufos that we don't have! https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> bufo-intern.png
> [knobiknows/all-the-bufo](https://github.com/knobiknows/all-the-bufo)knobiknows/all-the-bufo | Added by GitHub (23 kB)
> https://github.com/knobiknows/all-the-bufo/blob/main/all-the-bufo/bufo-intern.png
> 
> View newer replies
> 
> User16
> :connect-fingerguns:  3:59 PM
> Emojiteam can we remove this? For photosensitivity :thread:
> 
> +1
> 11 replies
> Last reply 24 days agoView thread
> 
> User17
>   3:04 PM
> wtb :bufo-cheerleader: / :bufo-cheers-you-on: which is like :bufo-excite:  or :doodle-bufo-yay: but with pompoms (animation optional)
> :bufo-cheerleader:
> 6
> 
> 1 reply
> 22 days agoView thread
> 
> User18
> :no-dms:  1:28 PM
> :hide-the-pain-bufo: is so cursed
> :cursed:
> 9
> :blursed:
> 4
> :yikes-harold:
> 5
> :lolol:
> 3
> 
> 3 replies
> Last reply 18 days agoView thread
> 
> User19
>   2:20 PM
> wtb :private-channel: to use when someone has linked to a private channel you're not in (see screenshot from Slack)
> 
> 7 replies
> Last reply 12 days agoView thread
> 
> User20
>   3:43 PM
> Hi Team
> Is there a table in hubble where I can check who created a emoji? Any help would be appreciated :)
> 
> 5 replies
> Last reply 12 days agoView thread
> 
> User21
>   8:28 PM
> wtb :bufo-eating-ortolan:
> :big-yikes:
> 3
> :bufo-blanket:
> 1
> :fancy-bufo:
> 2
> :bufo-eats-his-son-like-popcorn:
> 2
> :bufo-what-have-you-done:
> 1
> :wait-thats-illegal:
> 1
> 
> 2 replies
> Last reply 10 days agoView thread
> 
> User14
>   6:57 PM
> From a fresh Slack instance. It's no way to live.
> Image from iOS
>  
> Image from iOS
> 
> :nice:
> 5
> :nice2:
> 8
> :nice3:
> 5
> 👍
> 7
> :nice4:
> 5
> :nice7:
> 5
> :nice6:
> 5
> :nice-1:
> 5
> :nice-brat:
> 5
> :nice-icon:
> 5
> :nice-100:
> 5
> :nice-colors:
> 6
> :nice-nice:
> 5
> :n_ice:
> 5
> :nice-blurple:
> 5
> :nice_i_guess2:
> 5
> :haha-nice:
> 5
> :small-nice:
> 5
> :super-nice:
> 5
> :nice-in-swedish:
> 5
> :party-nice:
> 4
> :double-nice:
> 4
> 
> User22
>   2:24 PM
> :wave: I'm looking for help removing a reactji, specifically looking to retire jira-archreview-ask :jira-archreview-ask: since that forum is deprecated. I cleaned up the go/askbot-sheet to remove the behavior, but the emoji is owned by a former Stripe.
> 
> 1 reply
> 3 days agoView thread
> 
> User19
>   10:25 AM
> wtb :double-ty: (:ty::ty:)
> :double-ty:
> 7
> 
> 11 replies
> Last reply 19 hours ago"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt should format correctly with settings: C1-Default: C1-Default 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: fireside-sample.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt should format correctly with settings: C1-Default: C1-Default 1`] = `
"> [!slack]+ Message from Agreed
> **Time:** 3:11
> Get the endava stuff out there
> 
> User7
>   Yesterday at 3:40 PM
> Thanks for the clarity
> @user6
>  but I think it may cause the wrong expectation with Infosys if we validate our approach with them if we've already decided to go with another partner. They were very eager to have a discussion around the potential of building a connector when
> @user4
>  proposed it. Shall we rethink having the call? I'd need to think about the way to frame it given they've been asking us to get in front of work like this for them and we were already far along with Endava. Cc
> @user5
>  
> @user10
> 
> User4
>   Yesterday at 4:04 PM
> That works for me, just want to double-confirm that we feel the benefits we gain with Endava outweigh some of the benefits Infosys had mentioned:
> They have 200+ Guidewire-certified employees.
> They already have sandbox instances we'd be able to use for the Connectors without paying to obtain them from Guidewire.
> They take on contracted liability for ongoing support/maintenance/upgrades of marketplace integrations.
> They bring a list of 195 users.
> As long as we're happy with what Endava offers in comparison (e.g., speed to ramp) and the benefits of going with Endava will drive the ultimate goal of expanding our customer pipeline, then I'm peaceful with the decision.
> I think there is value in User1 reviewing our planned approach with Infosys to get their take and our A&C team engaging them in our GTM strategy
> Whichever we're going with, I think we should still have the quick follow-up call with Infosys, since it will not even include their offshore Guidewire development team next week (it will be more information-trading rather than validation/proposal of any solution, which
> @user1
>  
> @user6
>  I think you still may find intriguing). More than anything, my hope is that we don't lose momentum on the partnership in general, as we already know it's leading us to 3 named user workshops and a list of 195 other Insurance businesses.
> @user7
>  let me know if I'm thinking about it the wrong way, but a discussion on the topic of connectors doesn't come with an obligation or an expectation—we can do the quick discovery and then come back and say "let's focus on direct to start because we have the demand".
> :bufo-clap:
> 1
> 
> User8
>   Yesterday at 4:11 PM
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> 
> User4
>   Yesterday at 4:33 PM

> [!slack]+ Message from I'm Down To Sync In A Bit If It's Helpful For Us All To Connect Briefly On This Topic! Would Just Like To Understand A Little More About Decisions And Next Steps And Context I Might Have Missed From Separate Threads, And Then Happy To Disagree And Commit If Needed!
> **Time:** 4:34
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> For Connectors it's probably best to go with one for the suite, but then we could use other partners like Infosys for the custom Guidewire integrations with users.
> :100:
> 2
> 
> User14
>   Yesterday at 4:35 PM
> Correct
> 
> User4
>   Yesterday at 4:37 PM
> Let me know if you're free to connect this afternoon real quick
> @user6
>  
> @user1
>  
> @user7
>  
> @user8
> , feels like we can quickly get on the same page and move forward all with shared context
> 
> User1
>   Yesterday at 4:37 PM
> Happy to jump on a quick call. :bufo-thumbsup:
> :ty:
> 1
> 
> User4
>   Yesterday at 5:50 PM
> User1 and I just caught up, here's a recap:
> Most importantly, User1 flagged that the benefit of speed we get from Endava is partially because they're in our LDAP, they're in our JIRA, we have an SoW with them—basically, all the legal/logistical/admin details are already taken care of, they're fully integrated.
> @user7
>  
> @user9
>  do you know if Infosys is already set up with us in the same way from any prior engagement? If not, we'll have to go through contracting, legal redlines, provisioning, permissions, etc ... this process will push us far past the June 30th integration deadline. If this is the case, the Connector discussion is a moot point and we keep focus on Guidewire-to-user direct.
> If there are no admin roadblocks and Infosys is fully contracted and in our systems, then User1 is open to a quick discussion if they can get it scheduled ASAP next week, just in case they bring something to the table that blows Endava out of the water. We've already stressed in the email thread that we're on a major time crunch to make a decision; we'll be sure to stress this in the meeting as well in order to set clear expectations.
> We will highlight that, Connector or not, we're committed to continuing discovery with them on non-Marketplace Guidewire-to-user integrations. The direct opportunities with Travelers, MassMutual, and The Hartford are still very much something we want to pursue, and we also have no shortage of Guidewire-to-user opportunities that could use the expertise of a dedicated partner if there's a fit.
> 
> User7
>   Yesterday at 6:49 PM
> Infosys does not have these contractual agreements in place.
> @user4
>  let's talk strategy on this on Monday. There's some history here
> :ack-sg2:
> 1
> :+1:
> 1"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `
"> [!slack]+ Message from Agreed
> **Time:** 3:11
> Get the endava stuff out there
> 
> User7
>   Yesterday at 3:40 PM
> Thanks for the clarity
> @user6
>  but I think it may cause the wrong expectation with Infosys if we validate our approach with them if we've already decided to go with another partner. They were very eager to have a discussion around the potential of building a connector when
> @user4
>  proposed it. Shall we rethink having the call? I'd need to think about the way to frame it given they've been asking us to get in front of work like this for them and we were already far along with Endava. Cc
> @user5
>  
> @user10
> 
> User4
>   Yesterday at 4:04 PM
> That works for me, just want to double-confirm that we feel the benefits we gain with Endava outweigh some of the benefits Infosys had mentioned:
> They have 200+ Guidewire-certified employees.
> They already have sandbox instances we'd be able to use for the Connectors without paying to obtain them from Guidewire.
> They take on contracted liability for ongoing support/maintenance/upgrades of marketplace integrations.
> They bring a list of 195 users.
> As long as we're happy with what Endava offers in comparison (e.g., speed to ramp) and the benefits of going with Endava will drive the ultimate goal of expanding our customer pipeline, then I'm peaceful with the decision.
> I think there is value in User1 reviewing our planned approach with Infosys to get their take and our A&C team engaging them in our GTM strategy
> Whichever we're going with, I think we should still have the quick follow-up call with Infosys, since it will not even include their offshore Guidewire development team next week (it will be more information-trading rather than validation/proposal of any solution, which
> @user1
>  
> @user6
>  I think you still may find intriguing). More than anything, my hope is that we don't lose momentum on the partnership in general, as we already know it's leading us to 3 named user workshops and a list of 195 other Insurance businesses.
> @user7
>  let me know if I'm thinking about it the wrong way, but a discussion on the topic of connectors doesn't come with an obligation or an expectation—we can do the quick discovery and then come back and say "let's focus on direct to start because we have the demand".
> :bufo-clap:
> 1
> 
> User8
>   Yesterday at 4:11 PM
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> 
> User4
>   Yesterday at 4:33 PM

> [!slack]+ Message from I'm Down To Sync In A Bit If It's Helpful For Us All To Connect Briefly On This Topic! Would Just Like To Understand A Little More About Decisions And Next Steps And Context I Might Have Missed From Separate Threads, And Then Happy To Disagree And Commit If Needed!
> **Time:** 4:34
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> For Connectors it's probably best to go with one for the suite, but then we could use other partners like Infosys for the custom Guidewire integrations with users.
> :100:
> 2
> 
> User14
>   Yesterday at 4:35 PM
> Correct
> 
> User4
>   Yesterday at 4:37 PM
> Let me know if you're free to connect this afternoon real quick
> @user6
>  
> @user1
>  
> @user7
>  
> @user8
> , feels like we can quickly get on the same page and move forward all with shared context
> 
> User1
>   Yesterday at 4:37 PM
> Happy to jump on a quick call. :bufo-thumbsup:
> :ty:
> 1
> 
> User4
>   Yesterday at 5:50 PM
> User1 and I just caught up, here's a recap:
> Most importantly, User1 flagged that the benefit of speed we get from Endava is partially because they're in our LDAP, they're in our JIRA, we have an SoW with them—basically, all the legal/logistical/admin details are already taken care of, they're fully integrated.
> @user7
>  
> @user9
>  do you know if Infosys is already set up with us in the same way from any prior engagement? If not, we'll have to go through contracting, legal redlines, provisioning, permissions, etc ... this process will push us far past the June 30th integration deadline. If this is the case, the Connector discussion is a moot point and we keep focus on Guidewire-to-user direct.
> If there are no admin roadblocks and Infosys is fully contracted and in our systems, then User1 is open to a quick discussion if they can get it scheduled ASAP next week, just in case they bring something to the table that blows Endava out of the water. We've already stressed in the email thread that we're on a major time crunch to make a decision; we'll be sure to stress this in the meeting as well in order to set clear expectations.
> We will highlight that, Connector or not, we're committed to continuing discovery with them on non-Marketplace Guidewire-to-user integrations. The direct opportunities with Travelers, MassMutual, and The Hartford are still very much something we want to pursue, and we also have no shortage of Guidewire-to-user opportunities that could use the expertise of a dedicated partner if there's a fit.
> 
> User7
>   Yesterday at 6:49 PM
> Infosys does not have these contractual agreements in place.
> @user4
>  let's talk strategy on this on Monday. There's some history here
> :ack-sg2:
> 1
> :+1:
> 1"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `
"> [!slack]+ Message from Agreed
> **Time:** 3:11
> Get the endava stuff out there
> 
> User7
>   Yesterday at 3:40 PM
> Thanks for the clarity
> @user6
>  but I think it may cause the wrong expectation with Infosys if we validate our approach with them if we've already decided to go with another partner. They were very eager to have a discussion around the potential of building a connector when
> @user4
>  proposed it. Shall we rethink having the call? I'd need to think about the way to frame it given they've been asking us to get in front of work like this for them and we were already far along with Endava. Cc
> @user5
>  
> @user10
> 
> User4
>   Yesterday at 4:04 PM
> That works for me, just want to double-confirm that we feel the benefits we gain with Endava outweigh some of the benefits Infosys had mentioned:
> They have 200+ Guidewire-certified employees.
> They already have sandbox instances we'd be able to use for the Connectors without paying to obtain them from Guidewire.
> They take on contracted liability for ongoing support/maintenance/upgrades of marketplace integrations.
> They bring a list of 195 users.
> As long as we're happy with what Endava offers in comparison (e.g., speed to ramp) and the benefits of going with Endava will drive the ultimate goal of expanding our customer pipeline, then I'm peaceful with the decision.
> I think there is value in User1 reviewing our planned approach with Infosys to get their take and our A&C team engaging them in our GTM strategy
> Whichever we're going with, I think we should still have the quick follow-up call with Infosys, since it will not even include their offshore Guidewire development team next week (it will be more information-trading rather than validation/proposal of any solution, which
> @user1
>  
> @user6
>  I think you still may find intriguing). More than anything, my hope is that we don't lose momentum on the partnership in general, as we already know it's leading us to 3 named user workshops and a list of 195 other Insurance businesses.
> @user7
>  let me know if I'm thinking about it the wrong way, but a discussion on the topic of connectors doesn't come with an obligation or an expectation—we can do the quick discovery and then come back and say "let's focus on direct to start because we have the demand".
> 👏
> 1
> 
> User8
>   Yesterday at 4:11 PM
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> 
> User4
>   Yesterday at 4:33 PM

> [!slack]+ Message from I'm Down To Sync In A Bit If It's Helpful For Us All To Connect Briefly On This Topic! Would Just Like To Understand A Little More About Decisions And Next Steps And Context I Might Have Missed From Separate Threads, And Then Happy To Disagree And Commit If Needed!
> **Time:** 4:34
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> For Connectors it's probably best to go with one for the suite, but then we could use other partners like Infosys for the custom Guidewire integrations with users.
> :100:
> 2
> 
> User14
>   Yesterday at 4:35 PM
> Correct
> 
> User4
>   Yesterday at 4:37 PM
> Let me know if you're free to connect this afternoon real quick
> @user6
>  
> @user1
>  
> @user7
>  
> @user8
> , feels like we can quickly get on the same page and move forward all with shared context
> 
> User1
>   Yesterday at 4:37 PM
> Happy to jump on a quick call. :bufo-thumbsup:
> :ty:
> 1
> 
> User4
>   Yesterday at 5:50 PM
> User1 and I just caught up, here's a recap:
> Most importantly, User1 flagged that the benefit of speed we get from Endava is partially because they're in our LDAP, they're in our JIRA, we have an SoW with them—basically, all the legal/logistical/admin details are already taken care of, they're fully integrated.
> @user7
>  
> @user9
>  do you know if Infosys is already set up with us in the same way from any prior engagement? If not, we'll have to go through contracting, legal redlines, provisioning, permissions, etc ... this process will push us far past the June 30th integration deadline. If this is the case, the Connector discussion is a moot point and we keep focus on Guidewire-to-user direct.
> If there are no admin roadblocks and Infosys is fully contracted and in our systems, then User1 is open to a quick discussion if they can get it scheduled ASAP next week, just in case they bring something to the table that blows Endava out of the water. We've already stressed in the email thread that we're on a major time crunch to make a decision; we'll be sure to stress this in the meeting as well in order to set clear expectations.
> We will highlight that, Connector or not, we're committed to continuing discovery with them on non-Marketplace Guidewire-to-user integrations. The direct opportunities with Travelers, MassMutual, and The Hartford are still very much something we want to pursue, and we also have no shortage of Guidewire-to-user opportunities that could use the expertise of a dedicated partner if there's a fit.
> 
> User7
>   Yesterday at 6:49 PM
> Infosys does not have these contractual agreements in place.
> @user4
>  let's talk strategy on this on Monday. There's some history here
> :ack-sg2:
> 1
> :+1:
> 1"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: guidewire-sample.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `
"> [!slack]+ Message from Agreed
> **Time:** 3:11
> Get the endava stuff out there
> 
> User7
>   Yesterday at 3:40 PM
> Thanks for the clarity
> @user6
>  but I think it may cause the wrong expectation with Infosys if we validate our approach with them if we've already decided to go with another partner. They were very eager to have a discussion around the potential of building a connector when
> @user4
>  proposed it. Shall we rethink having the call? I'd need to think about the way to frame it given they've been asking us to get in front of work like this for them and we were already far along with Endava. Cc
> @user5
>  
> @user10
> 
> User4
>   Yesterday at 4:04 PM
> That works for me, just want to double-confirm that we feel the benefits we gain with Endava outweigh some of the benefits Infosys had mentioned:
> They have 200+ Guidewire-certified employees.
> They already have sandbox instances we'd be able to use for the Connectors without paying to obtain them from Guidewire.
> They take on contracted liability for ongoing support/maintenance/upgrades of marketplace integrations.
> They bring a list of 195 users.
> As long as we're happy with what Endava offers in comparison (e.g., speed to ramp) and the benefits of going with Endava will drive the ultimate goal of expanding our customer pipeline, then I'm peaceful with the decision.
> I think there is value in User1 reviewing our planned approach with Infosys to get their take and our A&C team engaging them in our GTM strategy
> Whichever we're going with, I think we should still have the quick follow-up call with Infosys, since it will not even include their offshore Guidewire development team next week (it will be more information-trading rather than validation/proposal of any solution, which
> @user1
>  
> @user6
>  I think you still may find intriguing). More than anything, my hope is that we don't lose momentum on the partnership in general, as we already know it's leading us to 3 named user workshops and a list of 195 other Insurance businesses.
> @user7
>  let me know if I'm thinking about it the wrong way, but a discussion on the topic of connectors doesn't come with an obligation or an expectation—we can do the quick discovery and then come back and say "let's focus on direct to start because we have the demand".
> :bufo-clap:
> 1
> 
> User8
>   Yesterday at 4:11 PM
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> 
> User4
>   Yesterday at 4:33 PM

> [!slack]+ Message from I'm Down To Sync In A Bit If It's Helpful For Us All To Connect Briefly On This Topic! Would Just Like To Understand A Little More About Decisions And Next Steps And Context I Might Have Missed From Separate Threads, And Then Happy To Disagree And Commit If Needed!
> **Time:** 4:34
> One more chime in here - is there a world in which we use both? Does the GW work need to be exclusive?
> For Connectors it's probably best to go with one for the suite, but then we could use other partners like Infosys for the custom Guidewire integrations with users.
> :100:
> 2
> 
> User14
>   Yesterday at 4:35 PM
> Correct
> 
> User4
>   Yesterday at 4:37 PM
> Let me know if you're free to connect this afternoon real quick
> @user6
>  
> @user1
>  
> @user7
>  
> @user8
> , feels like we can quickly get on the same page and move forward all with shared context
> 
> User1
>   Yesterday at 4:37 PM
> Happy to jump on a quick call. :bufo-thumbsup:
> :ty:
> 1
> 
> User4
>   Yesterday at 5:50 PM
> User1 and I just caught up, here's a recap:
> Most importantly, User1 flagged that the benefit of speed we get from Endava is partially because they're in our LDAP, they're in our JIRA, we have an SoW with them—basically, all the legal/logistical/admin details are already taken care of, they're fully integrated.
> @user7
>  
> @user9
>  do you know if Infosys is already set up with us in the same way from any prior engagement? If not, we'll have to go through contracting, legal redlines, provisioning, permissions, etc ... this process will push us far past the June 30th integration deadline. If this is the case, the Connector discussion is a moot point and we keep focus on Guidewire-to-user direct.
> If there are no admin roadblocks and Infosys is fully contracted and in our systems, then User1 is open to a quick discussion if they can get it scheduled ASAP next week, just in case they bring something to the table that blows Endava out of the water. We've already stressed in the email thread that we're on a major time crunch to make a decision; we'll be sure to stress this in the meeting as well in order to set clear expectations.
> We will highlight that, Connector or not, we're committed to continuing discovery with them on non-Marketplace Guidewire-to-user integrations. The direct opportunities with Travelers, MassMutual, and The Hartford are still very much something we want to pursue, and we also have no shortage of Guidewire-to-user opportunities that could use the expertise of a dedicated partner if there's a fit.
> 
> User7
>   Yesterday at 6:49 PM
> Infosys does not have these contractual agreements in place.
> @user4
>  let's talk strategy on this on Monday. There's some history here
> :ack-sg2:
> 1
> :+1:
> 1"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt should format correctly with settings: C1-Default: C1-Default 1`] = `
"> [!slack]+ Message from Hello Chaps! Happy March!
> **Time:** 3:13
> Wanted to get your feedback on my update Guidewire doc here https://docs.google.com/document/d/1l0LcYAZxgSNDNCNTmZaOBvVuyTt4fosZu6Lr49PXxWs/edit?tab=t.0
> 
> Google Docs
>  
> 
> Guidewire–Stripe Connector: Consolidated Strategy & Decision Document
> Google Doc
> 
> 3:14
> The part im missing is customer validation - are you guys able to help me out with some customer demand that I can list for these connectors?
> 
> User2
> :face_with_thermometer:  3:14 PM
> hi
> @user1
>  will look at it in a bit.. great to hear from you..
> 
> User1
>   3:14 PM

> [!slack]+ Message from You Too Dude! Hope You're Not Too Sick!
> **Time:** 3:14
> My whole household had Norovirus last week, fun times
> 
> User2
> :face_with_thermometer:  3:15 PM
> oh boy.. the work distracts me from thinking about it and makes the day go by faster
> 
> User1
>   3:16 PM

> [!slack]+ Message from Works To A Point, Noro There's No Point Even Trying To Fight It
> **Time:** 3:16
> just buckle up for the ride LOL
> 
> User3
>   3:20 PM

> [!slack]+ Message from Cheers Gentlemen!
> **Time:** 3:20
> I will take a look at the doc
> @user1
>  :slightly_smiling_face:
> 
> User1
>   3:20 PM
> cool thank you :bufo+1:
> 
> User3
>   3:20 PM
> I am sure it is of the utmost quality
> :llm-intensifies:
> 1
> 
> User1
>   3:21 PM

> [!slack]+ Message from Dont Get Too Hung Up On Costs Those Are Under Negotiation
> **Time:** 3:21
> it'll be toward the lower end of the range I gave
> :+1:
> 1
> 
> User3
>   3:21 PM
> yea I never do - that is sales jargon
> 
> User1
>   3:22 PM
> feel free to drop comments on it, it's a WIP
> :+1::+1::skin-tone-4:
> 2"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `
"> [!slack]+ Message from Hello Chaps! Happy March!
> **Time:** 3:13
> Wanted to get your feedback on my update Guidewire doc here https://docs.google.com/document/d/1l0LcYAZxgSNDNCNTmZaOBvVuyTt4fosZu6Lr49PXxWs/edit?tab=t.0
> 
> Google Docs
>  
> 
> Guidewire–Stripe Connector: Consolidated Strategy & Decision Document
> Google Doc
> 
> 3:14
> The part im missing is customer validation - are you guys able to help me out with some customer demand that I can list for these connectors?
> 
> User2
> :face_with_thermometer:  3:14 PM
> hi
> @user1
>  will look at it in a bit.. great to hear from you..
> 
> User1
>   3:14 PM

> [!slack]+ Message from You Too Dude! Hope You're Not Too Sick!
> **Time:** 3:14
> My whole household had Norovirus last week, fun times
> 
> User2
> :face_with_thermometer:  3:15 PM
> oh boy.. the work distracts me from thinking about it and makes the day go by faster
> 
> User1
>   3:16 PM

> [!slack]+ Message from Works To A Point, Noro There's No Point Even Trying To Fight It
> **Time:** 3:16
> just buckle up for the ride LOL
> 
> User3
>   3:20 PM

> [!slack]+ Message from Cheers Gentlemen!
> **Time:** 3:20
> I will take a look at the doc
> @user1
>  :slightly_smiling_face:
> 
> User1
>   3:20 PM
> cool thank you :bufo+1:
> 
> User3
>   3:20 PM
> I am sure it is of the utmost quality
> :llm-intensifies:
> 1
> 
> User1
>   3:21 PM

> [!slack]+ Message from Dont Get Too Hung Up On Costs Those Are Under Negotiation
> **Time:** 3:21
> it'll be toward the lower end of the range I gave
> :+1:
> 1
> 
> User3
>   3:21 PM
> yea I never do - that is sales jargon
> 
> User1
>   3:22 PM
> feel free to drop comments on it, it's a WIP
> :+1::+1::skin-tone-4:
> 2"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `
"> [!slack]+ Message from Hello Chaps! Happy March!
> **Time:** 3:13
> Wanted to get your feedback on my update Guidewire doc here https://docs.google.com/document/d/1l0LcYAZxgSNDNCNTmZaOBvVuyTt4fosZu6Lr49PXxWs/edit?tab=t.0
> 
> Google Docs
>  
> 
> Guidewire–Stripe Connector: Consolidated Strategy & Decision Document
> Google Doc
> 
> 3:14
> The part im missing is customer validation - are you guys able to help me out with some customer demand that I can list for these connectors?
> 
> User2
> :face_with_thermometer:  3:14 PM
> hi
> @user1
>  will look at it in a bit.. great to hear from you..
> 
> User1
>   3:14 PM

> [!slack]+ Message from You Too Dude! Hope You're Not Too Sick!
> **Time:** 3:14
> My whole household had Norovirus last week, fun times
> 
> User2
> :face_with_thermometer:  3:15 PM
> oh boy.. the work distracts me from thinking about it and makes the day go by faster
> 
> User1
>   3:16 PM

> [!slack]+ Message from Works To A Point, Noro There's No Point Even Trying To Fight It
> **Time:** 3:16
> just buckle up for the ride LOL
> 
> User3
>   3:20 PM

> [!slack]+ Message from Cheers Gentlemen!
> **Time:** 3:20
> I will take a look at the doc
> @user1
>  :slightly_smiling_face:
> 
> User1
>   3:20 PM
> cool thank you :bufo+1:
> 
> User3
>   3:20 PM
> I am sure it is of the utmost quality
> :llm-intensifies:
> 1
> 
> User1
>   3:21 PM

> [!slack]+ Message from Dont Get Too Hung Up On Costs Those Are Under Negotiation
> **Time:** 3:21
> it'll be toward the lower end of the range I gave
> :+1:
> 1
> 
> User3
>   3:21 PM
> yea I never do - that is sales jargon
> 
> User1
>   3:22 PM
> feel free to drop comments on it, it's a WIP
> :+1::+1::skin-tone-4:
> 2"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: multi-person-dm-sample.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `
"> [!slack]+ Message from Hello Chaps! Happy March!
> **Time:** 3:13
> Wanted to get your feedback on my update Guidewire doc here https://docs.google.com/document/d/1l0LcYAZxgSNDNCNTmZaOBvVuyTt4fosZu6Lr49PXxWs/edit?tab=t.0
> 
> Google Docs
>  
> 
> Guidewire–Stripe Connector: Consolidated Strategy & Decision Document
> Google Doc
> 
> 3:14
> The part im missing is customer validation - are you guys able to help me out with some customer demand that I can list for these connectors?
> 
> User2
> :face_with_thermometer:  3:14 PM
> hi
> @user1
>  will look at it in a bit.. great to hear from you..
> 
> User1
>   3:14 PM

> [!slack]+ Message from You Too Dude! Hope You're Not Too Sick!
> **Time:** 3:14
> My whole household had Norovirus last week, fun times
> 
> User2
> :face_with_thermometer:  3:15 PM
> oh boy.. the work distracts me from thinking about it and makes the day go by faster
> 
> User1
>   3:16 PM

> [!slack]+ Message from Works To A Point, Noro There's No Point Even Trying To Fight It
> **Time:** 3:16
> just buckle up for the ride LOL
> 
> User3
>   3:20 PM

> [!slack]+ Message from Cheers Gentlemen!
> **Time:** 3:20
> I will take a look at the doc
> @user1
>  :slightly_smiling_face:
> 
> User1
>   3:20 PM
> cool thank you :bufo+1:
> 
> User3
>   3:20 PM
> I am sure it is of the utmost quality
> :llm-intensifies:
> 1
> 
> User1
>   3:21 PM

> [!slack]+ Message from Dont Get Too Hung Up On Costs Those Are Under Negotiation
> **Time:** 3:21
> it'll be toward the lower end of the range I gave
> :+1:
> 1
> 
> User3
>   3:21 PM
> yea I never do - that is sales jargon
> 
> User1
>   3:22 PM
> feel free to drop comments on it, it's a WIP
> :+1::+1::skin-tone-4:
> 2"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt should format correctly with settings: C1-Default: C1-Default 1`] = `
"> [!slack]+ Message from Hey All, I've Been Annoyed For A While By Trying To Copy And Paste Slack Conversations Into Obsidian 'nicely' So I Knocked Up A Quick Plug-in To Make It Easier. Does Anyone Know If / How I Can Get This Added To The Internal Stripe Obsidian Plug-in Repo?btw You Can Grab It
> **Time:** here
> 4 files
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_5205.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/img_5205.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/download/img_5205.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3606.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/img_3606.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/download/img_3606.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_8424.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/img_8424.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/download/img_8424.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3729.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/img_3729.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/download/img_3729.png?origin_team=E0181S17H6Z)
> 
> amittell/obsidian-slack-formatter
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 11 minutes ago

> [!slack]+ Message from Added By
> **Time:** GitHub
> ![🤩](https://emoji.slack-edge.com/T0181S17H6Z/so-beautiful/ef84f57243c1429e.gif)27![😍](https://emoji.slack-edge.com/T0181S17H6Z/pika-aww/b6643a39be4ca95c.png)5
> 
> 13 replies
> 
> ---

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> you can make a PR here [https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins](https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins) and tag obsidian-reviewers for a review
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Clement Miaoclement Miao
> **Time:** :no_entry:
> this is AMAZING omg
> 
> 
> even if a bit buggy, this is going to be great

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T14:18:00.000Z
> Yeah, this is going to be fantastic.
> 
> 
> So, first attempt was copying and pasting this very thread, and looks good, but it doesn't seem to detect where all the messages start and end. I get one big message containing the first three messages.
> 
> 
> Curious how the clipboard works on Slack copies; are there image objects along with the text, where eventually we could get pasted embedded images to just paste right in there, too?
> 
> ![🤔](https://emoji.slack-edge.com/T0181S17H6Z/bufo-thinking/23345a0f0ad89bd4.png)1

> [!slack]+ Message from David Brownmandavid Brownman
> **Time:** 2025-02-07T18:31:00.000Z
> [@alexm](https://stripe.slack.com/team/U07JC6P29UM) [@phillipedgington](https://stripe.slack.com/team/UL85BJW1W) FYI our rule (so far) is that we can use stripe-employee developed plugins straight from the "store", so i'm not sure you need the \`private-oss-forks\` PR if you don't want it
> 
> ![👍](https://emoji.slack-edge.com/T0181S17H6Z/nice5/c6a3c019914a4f1e.gif)1
> 
> 
> either way, seriously cool plugin!
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> oh interesting
> 
> 
> nice

> [!slack]+ Message from I've Updated The Pluggin To Handle Dm Conversation Imports. Need To Run A Whole Bunch Of Other Slack Copy And Pastes Through It I'm Sure There Are More Cases I Haven't Accounted For, What You Get In A Raw Copy And Paste Is Limited But Might Be Able To Preserve The Images That Come Over In It. The Intercept Cmd+v Is Currently Non-functional I Know About That One.
> **Time:** :bufoyes:
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)1

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T13:39:00.000Z
> Hi [@alexm](https://stripe.slack.com/team/U07JC6P29UM), thanks for your work on this! Having installed the latest version (0.0.6), I'm having a bit of trouble making it paste as expected. I tried selecting all the messages in one entire thread in Slack, copying, and then using Cmd-shift-V to paste into Obsidian, and got nothing whatsoever as output. Hitting just Cmd-V does paste the usual badly formatted stuff, so I know it's in the clipboard. Then I tried doing the same with this very thread, and found that it did paste, but only about the last half of the thread. Any thoughts?"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `
"> [!slack]+ Message from Hey All, I've Been Annoyed For A While By Trying To Copy And Paste Slack Conversations Into Obsidian 'nicely' So I Knocked Up A Quick Plug-in To Make It Easier. Does Anyone Know If / How I Can Get This Added To The Internal Stripe Obsidian Plug-in Repo?btw You Can Grab It
> **Time:** here
> 4 files
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_5205.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/img_5205.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/download/img_5205.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3606.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/img_3606.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/download/img_3606.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_8424.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/img_8424.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/download/img_8424.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3729.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/img_3729.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/download/img_3729.png?origin_team=E0181S17H6Z)
> 
> amittell/obsidian-slack-formatter
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 11 minutes ago

> [!slack]+ Message from Added By
> **Time:** GitHub
> ![🤩](https://emoji.slack-edge.com/T0181S17H6Z/so-beautiful/ef84f57243c1429e.gif)27![😍](https://emoji.slack-edge.com/T0181S17H6Z/pika-aww/b6643a39be4ca95c.png)5
> 
> 13 replies
> 
> ---

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> you can make a PR here [https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins](https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins) and tag obsidian-reviewers for a review
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Clement Miaoclement Miao
> **Time:** :no_entry:
> this is AMAZING omg
> 
> 
> even if a bit buggy, this is going to be great

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T14:18:00.000Z
> Yeah, this is going to be fantastic.
> 
> 
> So, first attempt was copying and pasting this very thread, and looks good, but it doesn't seem to detect where all the messages start and end. I get one big message containing the first three messages.
> 
> 
> Curious how the clipboard works on Slack copies; are there image objects along with the text, where eventually we could get pasted embedded images to just paste right in there, too?
> 
> ![🤔](https://emoji.slack-edge.com/T0181S17H6Z/bufo-thinking/23345a0f0ad89bd4.png)1

> [!slack]+ Message from David Brownmandavid Brownman
> **Time:** 2025-02-07T18:31:00.000Z
> [@alexm](https://stripe.slack.com/team/U07JC6P29UM) [@phillipedgington](https://stripe.slack.com/team/UL85BJW1W) FYI our rule (so far) is that we can use stripe-employee developed plugins straight from the "store", so i'm not sure you need the \`private-oss-forks\` PR if you don't want it
> 
> ![👍](https://emoji.slack-edge.com/T0181S17H6Z/nice5/c6a3c019914a4f1e.gif)1
> 
> 
> either way, seriously cool plugin!
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> oh interesting
> 
> 
> nice

> [!slack]+ Message from I've Updated The Pluggin To Handle Dm Conversation Imports. Need To Run A Whole Bunch Of Other Slack Copy And Pastes Through It I'm Sure There Are More Cases I Haven't Accounted For, What You Get In A Raw Copy And Paste Is Limited But Might Be Able To Preserve The Images That Come Over In It. The Intercept Cmd+v Is Currently Non-functional I Know About That One.
> **Time:** :bufoyes:
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)1

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T13:39:00.000Z
> Hi [@alexm](https://stripe.slack.com/team/U07JC6P29UM), thanks for your work on this! Having installed the latest version (0.0.6), I'm having a bit of trouble making it paste as expected. I tried selecting all the messages in one entire thread in Slack, copying, and then using Cmd-shift-V to paste into Obsidian, and got nothing whatsoever as output. Hitting just Cmd-V does paste the usual badly formatted stuff, so I know it's in the clipboard. Then I tried doing the same with this very thread, and found that it did paste, but only about the last half of the thread. Any thoughts?"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `
"> [!slack]+ Message from Hey All, I've Been Annoyed For A While By Trying To Copy And Paste Slack Conversations Into Obsidian 'nicely' So I Knocked Up A Quick Plug-in To Make It Easier. Does Anyone Know If / How I Can Get This Added To The Internal Stripe Obsidian Plug-in Repo?btw You Can Grab It
> **Time:** here
> 4 files
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_5205.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/img_5205.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/download/img_5205.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3606.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/img_3606.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/download/img_3606.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_8424.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/img_8424.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/download/img_8424.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3729.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/img_3729.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/download/img_3729.png?origin_team=E0181S17H6Z)
> 
> amittell/obsidian-slack-formatter
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 11 minutes ago

> [!slack]+ Message from Added By
> **Time:** GitHub
> ![🤩](https://emoji.slack-edge.com/T0181S17H6Z/so-beautiful/ef84f57243c1429e.gif)27![😍](https://emoji.slack-edge.com/T0181S17H6Z/pika-aww/b6643a39be4ca95c.png)5
> 
> 13 replies
> 
> ---

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> you can make a PR here [https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins](https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins) and tag obsidian-reviewers for a review
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Clement Miaoclement Miao
> **Time:** :no_entry:
> this is AMAZING omg
> 
> 
> even if a bit buggy, this is going to be great

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T14:18:00.000Z
> Yeah, this is going to be fantastic.
> 
> 
> So, first attempt was copying and pasting this very thread, and looks good, but it doesn't seem to detect where all the messages start and end. I get one big message containing the first three messages.
> 
> 
> Curious how the clipboard works on Slack copies; are there image objects along with the text, where eventually we could get pasted embedded images to just paste right in there, too?
> 
> ![🤔](https://emoji.slack-edge.com/T0181S17H6Z/bufo-thinking/23345a0f0ad89bd4.png)1

> [!slack]+ Message from David Brownmandavid Brownman
> **Time:** 2025-02-07T18:31:00.000Z
> [@alexm](https://stripe.slack.com/team/U07JC6P29UM) [@phillipedgington](https://stripe.slack.com/team/UL85BJW1W) FYI our rule (so far) is that we can use stripe-employee developed plugins straight from the "store", so i'm not sure you need the \`private-oss-forks\` PR if you don't want it
> 
> ![👍](https://emoji.slack-edge.com/T0181S17H6Z/nice5/c6a3c019914a4f1e.gif)1
> 
> 
> either way, seriously cool plugin!
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> oh interesting
> 
> 
> nice

> [!slack]+ Message from I've Updated The Pluggin To Handle Dm Conversation Imports. Need To Run A Whole Bunch Of Other Slack Copy And Pastes Through It I'm Sure There Are More Cases I Haven't Accounted For, What You Get In A Raw Copy And Paste Is Limited But Might Be Able To Preserve The Images That Come Over In It. The Intercept Cmd+v Is Currently Non-functional I Know About That One.
> **Time:** :bufoyes:
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)1

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T13:39:00.000Z
> Hi [@alexm](https://stripe.slack.com/team/U07JC6P29UM), thanks for your work on this! Having installed the latest version (0.0.6), I'm having a bit of trouble making it paste as expected. I tried selecting all the messages in one entire thread in Slack, copying, and then using Cmd-shift-V to paste into Obsidian, and got nothing whatsoever as output. Hitting just Cmd-V does paste the usual badly formatted stuff, so I know it's in the clipboard. Then I tried doing the same with this very thread, and found that it did paste, but only about the last half of the thread. Any thoughts?"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-content.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `
"> [!slack]+ Message from Hey All, I've Been Annoyed For A While By Trying To Copy And Paste Slack Conversations Into Obsidian 'nicely' So I Knocked Up A Quick Plug-in To Make It Easier. Does Anyone Know If / How I Can Get This Added To The Internal Stripe Obsidian Plug-in Repo?btw You Can Grab It
> **Time:** here
> 4 files
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_5205.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/img_5205.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9PP539/download/img_5205.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3606.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/img_3606.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C072EZK8/download/img_3606.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_8424.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/img_8424.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08BS9Q78RM/download/img_8424.png?origin_team=E0181S17H6Z)
> 
> [

> [!slack]+ Message from 
> **Time:** IMG_3729.png
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/img_3729.png)
> 
> [](https://files.slack.com/files-pri/T0181S17H6Z-F08C6RCG6HG/download/img_3729.png?origin_team=E0181S17H6Z)
> 
> amittell/obsidian-slack-formatter
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 11 minutes ago

> [!slack]+ Message from Added By
> **Time:** GitHub
> ![🤩](https://emoji.slack-edge.com/T0181S17H6Z/so-beautiful/ef84f57243c1429e.gif)27![😍](https://emoji.slack-edge.com/T0181S17H6Z/pika-aww/b6643a39be4ca95c.png)5
> 
> 13 replies
> 
> ---

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> you can make a PR here [https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins](https://git.corp.stripe.com/stripe-private-oss-forks/obsidian-plugins) and tag obsidian-reviewers for a review
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Clement Miaoclement Miao
> **Time:** :no_entry:
> this is AMAZING omg
> 
> 
> even if a bit buggy, this is going to be great

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T14:18:00.000Z
> Yeah, this is going to be fantastic.
> 
> 
> So, first attempt was copying and pasting this very thread, and looks good, but it doesn't seem to detect where all the messages start and end. I get one big message containing the first three messages.
> 
> 
> Curious how the clipboard works on Slack copies; are there image objects along with the text, where eventually we could get pasted embedded images to just paste right in there, too?
> 
> ![🤔](https://emoji.slack-edge.com/T0181S17H6Z/bufo-thinking/23345a0f0ad89bd4.png)1

> [!slack]+ Message from David Brownmandavid Brownman
> **Time:** 2025-02-07T18:31:00.000Z
> [@alexm](https://stripe.slack.com/team/U07JC6P29UM) [@phillipedgington](https://stripe.slack.com/team/UL85BJW1W) FYI our rule (so far) is that we can use stripe-employee developed plugins straight from the "store", so i'm not sure you need the \`private-oss-forks\` PR if you don't want it
> 
> ![👍](https://emoji.slack-edge.com/T0181S17H6Z/nice5/c6a3c019914a4f1e.gif)1
> 
> 
> either way, seriously cool plugin!
> 
> ![🙏](https://emoji.slack-edge.com/T0181S17H6Z/bufo-ty/a4e226ec281b39ba.png)1

> [!slack]+ Message from Phillip Edgingtonphillip Edgington
> **Time:** :go-llm-logo:
> oh interesting
> 
> 
> nice

> [!slack]+ Message from I've Updated The Pluggin To Handle Dm Conversation Imports. Need To Run A Whole Bunch Of Other Slack Copy And Pastes Through It I'm Sure There Are More Cases I Haven't Accounted For, What You Get In A Raw Copy And Paste Is Limited But Might Be Able To Preserve The Images That Come Over In It. The Intercept Cmd+v Is Currently Non-functional I Know About That One.
> **Time:** :bufoyes:
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)1

> [!slack]+ Message from Trajan Mcgilltrajan Mcgill
> **Time:** 2025-02-07T13:39:00.000Z
> Hi [@alexm](https://stripe.slack.com/team/U07JC6P29UM), thanks for your work on this! Having installed the latest version (0.0.6), I'm having a bit of trouble making it paste as expected. I tried selecting all the messages in one entire thread in Slack, copying, and then using Cmd-shift-V to paste into Obsidian, and got nothing whatsoever as output. Hitting just Cmd-V does paste the usual badly formatted stuff, so I know it's in the clipboard. Then I tried doing the same with this very thread, and found that it did paste, but only about the last half of the thread. Any thoughts?"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt ERROR_INVALID_JSON: should handle invalid userMapJson gracefully: ERROR_INVALID_JSON 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt FORMAT_UNKNOWN: should handle non-Slack input gracefully: FORMAT_UNKNOWN 1`] = `""`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt should format correctly with settings: C1-Default: C1-Default 1`] = `
"> [!slack]+ Message from Byron Lukbyron Luk
> **Time:** :no_entry:
> anyone know of anything where I can paste in a google doc link and it'll automatically format into a pretty link? I imagine the tricky thing is figuring out the auth part
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U075VC5F3NU-35bc89188f66-24)![](https://ca.slack-edge.com/E0181S17H6Z-U02V3H43GGZ-f7b4fc673f58-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U038CNCLHCZ-0ff3cbcf92d8-24)![](https://ca.slack-edge.com/E0181S17H6Z-U9JV10CPL-31e6700f3725-24)11 replies
> 
> Last reply today at 12:24 PMView thread

> [!slack]+ Message from Jared Nicholsjared Nichols
> **Time:** 2025-03-27T16:49:00.000Z
> how are folks backing up their obsidian folder?
> 
> ![:google-drive:](https://emoji.slack-edge.com/T0181S17H6Z/google-drive/5961b5d7f64d3fdb.png)15![:git:](https://emoji.slack-edge.com/T0181S17H6Z/git/a38712d6013cdb04.png)4

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 12 replies
> 
> Last reply 8 days agoView thread

> [!slack]+ Message from Paul Branzburgpaul Branzburg
> **Time:** 2025-02-14T15:37:00.000Z
> Interested in querying my Obsidian vault with Gemini, which doesn't seem to support Markdown very well. Does anyone know a way of converting the vault to e.g. a single Google Doc, or uploading the entire thing to [https://notebooklm.google.com/](https://notebooklm.google.com/)?
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U069XJPRN6T-81d92fec1f7e-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)2 replies
> 
> Last reply 7 days agoView thread

> [!slack]+ Message from Added By
> **Time:** GitHub
> Made another thing mostly for myself but thought I'd share here incase anyone else finds it useful. Basic functionality is it searches all notes in the vault for the tag #tasks and the Tasks plugin format for tasks \`- [ ]\` (customization of both available in settings) then presents them as a dynamically updating ToDo list in the side pane, which also allows you to check/uncheck tasks in your notes. Completed notes are moved to the bottom. You can activate the side pane with the checkbox icon on the left side-bar or with the hotkey (defined in settings). Suggestions welcome!Oh, not relevant for Stripe Vault's due to policy, but also support mobile (for those personal todo lists)[https://github.com/amittell/obsidian-dynamic-todo-list/](https://github.com/amittell/obsidian-dynamic-todo-list/)Current backlog:
> 
> - Make an option to allow task note to be identified by filename or note header, currently only filename is supported.
> - Add a folder base include/exclude filter.
> - Sort better sorting of tagged task notes, allow the user to sort by created and last updated, make the default a setting.
> - Archiving of completed notes - don't show completed notes older than X date for 'last updated'.
> 
> 
> 
> 2 files
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E78WLLDP/img_9696.png)
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DUM8P09G/img_6792.png)
> 
> amittell/obsidian-dynamic-todo-list
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 34 minutes ago
> 
> 
> ![:heart:](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/2764-fe0f@2x.png)1
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U08259UD15M-907f74cf0e77-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U01GHRRFF33-10f9cb2cdee9-24)17 replies
> 
> Last reply 1 day agoView thread

> [!slack]+ Message from 
> **Time:** IMG_6888.PNG
> Mobile:
> 
> IMG_6888.PNG
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DX9FTD6G/img_6888.png)
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U03N3KKPXMK-b0fdd954f5fb-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)11 replies
> 
> Last reply 3 days agoView thread

> [!slack]+ Message from Alex Mittellalex Mittell
> **Time:** 2025-02-20T04:00:00.000Z
> Released a new version that's generally much nicer, available [here](https://github.com/amittell/obsidian-dynamic-todo-list/releases/tag/0.0.2).
> 
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)2
> 
> View newer replies
> 
> Yesterday

> [!slack]+ Message from 
> **Time:** IMG_7300
> good news! obsidian is now free for commercial use!
> 
> IMG_7300
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E8BQ0GPL/img_7300.png)
> 
> ![:bufo-wow:](https://emoji.slack-edge.com/T0181S17H6Z/bufo-wow/b6ec3fdfceb99b54.png)17![:obsidian-intensifies:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-intensifies/94bc5d4d9a5c06e8.gif)14![:obsidian-gemmy:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-gemmy/d965a674bea5185f.png)1

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 16 replies
> 
> Last reply today at 8:25 AMView thread"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt should format correctly with settings: C2-NoFeatures: C2-NoFeatures 1`] = `
"> [!slack]+ Message from Byron Lukbyron Luk
> **Time:** :no_entry:
> anyone know of anything where I can paste in a google doc link and it'll automatically format into a pretty link? I imagine the tricky thing is figuring out the auth part
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U075VC5F3NU-35bc89188f66-24)![](https://ca.slack-edge.com/E0181S17H6Z-U02V3H43GGZ-f7b4fc673f58-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U038CNCLHCZ-0ff3cbcf92d8-24)![](https://ca.slack-edge.com/E0181S17H6Z-U9JV10CPL-31e6700f3725-24)11 replies
> 
> Last reply today at 12:24 PMView thread

> [!slack]+ Message from Jared Nicholsjared Nichols
> **Time:** 2025-03-27T16:49:00.000Z
> how are folks backing up their obsidian folder?
> 
> ![:google-drive:](https://emoji.slack-edge.com/T0181S17H6Z/google-drive/5961b5d7f64d3fdb.png)15![:git:](https://emoji.slack-edge.com/T0181S17H6Z/git/a38712d6013cdb04.png)4

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 12 replies
> 
> Last reply 8 days agoView thread

> [!slack]+ Message from Paul Branzburgpaul Branzburg
> **Time:** 2025-02-14T15:37:00.000Z
> Interested in querying my Obsidian vault with Gemini, which doesn't seem to support Markdown very well. Does anyone know a way of converting the vault to e.g. a single Google Doc, or uploading the entire thing to [https://notebooklm.google.com/](https://notebooklm.google.com/)?
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U069XJPRN6T-81d92fec1f7e-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)2 replies
> 
> Last reply 7 days agoView thread

> [!slack]+ Message from Added By
> **Time:** GitHub
> Made another thing mostly for myself but thought I'd share here incase anyone else finds it useful. Basic functionality is it searches all notes in the vault for the tag #tasks and the Tasks plugin format for tasks \`- [ ]\` (customization of both available in settings) then presents them as a dynamically updating ToDo list in the side pane, which also allows you to check/uncheck tasks in your notes. Completed notes are moved to the bottom. You can activate the side pane with the checkbox icon on the left side-bar or with the hotkey (defined in settings). Suggestions welcome!Oh, not relevant for Stripe Vault's due to policy, but also support mobile (for those personal todo lists)[https://github.com/amittell/obsidian-dynamic-todo-list/](https://github.com/amittell/obsidian-dynamic-todo-list/)Current backlog:
> 
> - Make an option to allow task note to be identified by filename or note header, currently only filename is supported.
> - Add a folder base include/exclude filter.
> - Sort better sorting of tagged task notes, allow the user to sort by created and last updated, make the default a setting.
> - Archiving of completed notes - don't show completed notes older than X date for 'last updated'.
> 
> 
> 
> 2 files
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E78WLLDP/img_9696.png)
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DUM8P09G/img_6792.png)
> 
> amittell/obsidian-dynamic-todo-list
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 34 minutes ago
> 
> 
> ![:heart:](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/2764-fe0f@2x.png)1
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U08259UD15M-907f74cf0e77-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U01GHRRFF33-10f9cb2cdee9-24)17 replies
> 
> Last reply 1 day agoView thread

> [!slack]+ Message from 
> **Time:** IMG_6888.PNG
> Mobile:
> 
> IMG_6888.PNG
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DX9FTD6G/img_6888.png)
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U03N3KKPXMK-b0fdd954f5fb-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)11 replies
> 
> Last reply 3 days agoView thread

> [!slack]+ Message from Alex Mittellalex Mittell
> **Time:** 2025-02-20T04:00:00.000Z
> Released a new version that's generally much nicer, available [here](https://github.com/amittell/obsidian-dynamic-todo-list/releases/tag/0.0.2).
> 
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)2
> 
> View newer replies
> 
> Yesterday

> [!slack]+ Message from 
> **Time:** IMG_7300
> good news! obsidian is now free for commercial use!
> 
> IMG_7300
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E8BQ0GPL/img_7300.png)
> 
> ![:bufo-wow:](https://emoji.slack-edge.com/T0181S17H6Z/bufo-wow/b6ec3fdfceb99b54.png)17![:obsidian-intensifies:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-intensifies/94bc5d4d9a5c06e8.gif)14![:obsidian-gemmy:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-gemmy/d965a674bea5185f.png)1

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 16 replies
> 
> Last reply today at 8:25 AMView thread"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt should format correctly with settings: C3-CustomMaps: C3-CustomMaps 1`] = `
"> [!slack]+ Message from Byron Lukbyron Luk
> **Time:** :no_entry:
> anyone know of anything where I can paste in a google doc link and it'll automatically format into a pretty link? I imagine the tricky thing is figuring out the auth part
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U075VC5F3NU-35bc89188f66-24)![](https://ca.slack-edge.com/E0181S17H6Z-U02V3H43GGZ-f7b4fc673f58-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U038CNCLHCZ-0ff3cbcf92d8-24)![](https://ca.slack-edge.com/E0181S17H6Z-U9JV10CPL-31e6700f3725-24)11 replies
> 
> Last reply today at 12:24 PMView thread

> [!slack]+ Message from Jared Nicholsjared Nichols
> **Time:** 2025-03-27T16:49:00.000Z
> how are folks backing up their obsidian folder?
> 
> ![:google-drive:](https://emoji.slack-edge.com/T0181S17H6Z/google-drive/5961b5d7f64d3fdb.png)15![:git:](https://emoji.slack-edge.com/T0181S17H6Z/git/a38712d6013cdb04.png)4

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 12 replies
> 
> Last reply 8 days agoView thread

> [!slack]+ Message from Paul Branzburgpaul Branzburg
> **Time:** 2025-02-14T15:37:00.000Z
> Interested in querying my Obsidian vault with Gemini, which doesn't seem to support Markdown very well. Does anyone know a way of converting the vault to e.g. a single Google Doc, or uploading the entire thing to [https://notebooklm.google.com/](https://notebooklm.google.com/)?
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U069XJPRN6T-81d92fec1f7e-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)2 replies
> 
> Last reply 7 days agoView thread

> [!slack]+ Message from Added By
> **Time:** GitHub
> Made another thing mostly for myself but thought I'd share here incase anyone else finds it useful. Basic functionality is it searches all notes in the vault for the tag #tasks and the Tasks plugin format for tasks \`- [ ]\` (customization of both available in settings) then presents them as a dynamically updating ToDo list in the side pane, which also allows you to check/uncheck tasks in your notes. Completed notes are moved to the bottom. You can activate the side pane with the checkbox icon on the left side-bar or with the hotkey (defined in settings). Suggestions welcome!Oh, not relevant for Stripe Vault's due to policy, but also support mobile (for those personal todo lists)[https://github.com/amittell/obsidian-dynamic-todo-list/](https://github.com/amittell/obsidian-dynamic-todo-list/)Current backlog:
> 
> - Make an option to allow task note to be identified by filename or note header, currently only filename is supported.
> - Add a folder base include/exclude filter.
> - Sort better sorting of tagged task notes, allow the user to sort by created and last updated, make the default a setting.
> - Archiving of completed notes - don't show completed notes older than X date for 'last updated'.
> 
> 
> 
> 2 files
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E78WLLDP/img_9696.png)
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DUM8P09G/img_6792.png)
> 
> amittell/obsidian-dynamic-todo-list
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 34 minutes ago
> 
> 
> ![:heart:](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/2764-fe0f@2x.png)1
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U08259UD15M-907f74cf0e77-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U01GHRRFF33-10f9cb2cdee9-24)17 replies
> 
> Last reply 1 day agoView thread

> [!slack]+ Message from 
> **Time:** IMG_6888.PNG
> Mobile:
> 
> IMG_6888.PNG
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DX9FTD6G/img_6888.png)
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U03N3KKPXMK-b0fdd954f5fb-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)11 replies
> 
> Last reply 3 days agoView thread

> [!slack]+ Message from Alex Mittellalex Mittell
> **Time:** 2025-02-20T04:00:00.000Z
> Released a new version that's generally much nicer, available [here](https://github.com/amittell/obsidian-dynamic-todo-list/releases/tag/0.0.2).
> 
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)2
> 
> View newer replies
> 
> Yesterday

> [!slack]+ Message from 
> **Time:** IMG_7300
> good news! obsidian is now free for commercial use!
> 
> IMG_7300
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E8BQ0GPL/img_7300.png)
> 
> ![:bufo-wow:](https://emoji.slack-edge.com/T0181S17H6Z/bufo-wow/b6ec3fdfceb99b54.png)17![:obsidian-intensifies:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-intensifies/94bc5d4d9a5c06e8.gif)14![:obsidian-gemmy:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-gemmy/d965a674bea5185f.png)1

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 16 replies
> 
> Last reply today at 8:25 AMView thread"
`;

exports[`SlackFormatter Integration Tests (Snapshot) Sample: test-new-content.txt should format correctly with settings: C4-ThreadCollapse: C4-ThreadCollapse 1`] = `
"> [!slack]+ Message from Byron Lukbyron Luk
> **Time:** :no_entry:
> anyone know of anything where I can paste in a google doc link and it'll automatically format into a pretty link? I imagine the tricky thing is figuring out the auth part
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U075VC5F3NU-35bc89188f66-24)![](https://ca.slack-edge.com/E0181S17H6Z-U02V3H43GGZ-f7b4fc673f58-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U038CNCLHCZ-0ff3cbcf92d8-24)![](https://ca.slack-edge.com/E0181S17H6Z-U9JV10CPL-31e6700f3725-24)11 replies
> 
> Last reply today at 12:24 PMView thread

> [!slack]+ Message from Jared Nicholsjared Nichols
> **Time:** 2025-03-27T16:49:00.000Z
> how are folks backing up their obsidian folder?
> 
> ![:google-drive:](https://emoji.slack-edge.com/T0181S17H6Z/google-drive/5961b5d7f64d3fdb.png)15![:git:](https://emoji.slack-edge.com/T0181S17H6Z/git/a38712d6013cdb04.png)4

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 12 replies
> 
> Last reply 8 days agoView thread

> [!slack]+ Message from Paul Branzburgpaul Branzburg
> **Time:** 2025-02-14T15:37:00.000Z
> Interested in querying my Obsidian vault with Gemini, which doesn't seem to support Markdown very well. Does anyone know a way of converting the vault to e.g. a single Google Doc, or uploading the entire thing to [https://notebooklm.google.com/](https://notebooklm.google.com/)?
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U069XJPRN6T-81d92fec1f7e-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)2 replies
> 
> Last reply 7 days agoView thread

> [!slack]+ Message from Added By
> **Time:** GitHub
> Made another thing mostly for myself but thought I'd share here incase anyone else finds it useful. Basic functionality is it searches all notes in the vault for the tag #tasks and the Tasks plugin format for tasks \`- [ ]\` (customization of both available in settings) then presents them as a dynamically updating ToDo list in the side pane, which also allows you to check/uncheck tasks in your notes. Completed notes are moved to the bottom. You can activate the side pane with the checkbox icon on the left side-bar or with the hotkey (defined in settings). Suggestions welcome!Oh, not relevant for Stripe Vault's due to policy, but also support mobile (for those personal todo lists)[https://github.com/amittell/obsidian-dynamic-todo-list/](https://github.com/amittell/obsidian-dynamic-todo-list/)Current backlog:
> 
> - Make an option to allow task note to be identified by filename or note header, currently only filename is supported.
> - Add a folder base include/exclude filter.
> - Sort better sorting of tagged task notes, allow the user to sort by created and last updated, make the default a setting.
> - Archiving of completed notes - don't show completed notes older than X date for 'last updated'.
> 
> 
> 
> 2 files
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E78WLLDP/img_9696.png)
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DUM8P09G/img_6792.png)
> 
> amittell/obsidian-dynamic-todo-list
> 
> Language
> 
> TypeScript
> 
> Last updated
> 
> 34 minutes ago
> 
> 
> ![:heart:](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/2764-fe0f@2x.png)1
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U08259UD15M-907f74cf0e77-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)![](https://ca.slack-edge.com/E0181S17H6Z-U05HJRSHNTX-c5b5ecc1153d-24)![](https://ca.slack-edge.com/E0181S17H6Z-U01GHRRFF33-10f9cb2cdee9-24)17 replies
> 
> Last reply 1 day agoView thread

> [!slack]+ Message from 
> **Time:** IMG_6888.PNG
> Mobile:
> 
> IMG_6888.PNG
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08DX9FTD6G/img_6888.png)
> 
> ![](https://ca.slack-edge.com/E0181S17H6Z-U03N3KKPXMK-b0fdd954f5fb-24)![](https://ca.slack-edge.com/E0181S17H6Z-U07JC6P29UM-67fda94224a3-24)11 replies
> 
> Last reply 3 days agoView thread

> [!slack]+ Message from Alex Mittellalex Mittell
> **Time:** 2025-02-20T04:00:00.000Z
> Released a new version that's generally much nicer, available [here](https://github.com/amittell/obsidian-dynamic-todo-list/releases/tag/0.0.2).
> 
> ![🙏](https://a.slack-edge.com/production-standard-emoji-assets/14.0/apple-small/1f64f@2x.png)2
> 
> View newer replies
> 
> Yesterday

> [!slack]+ Message from 
> **Time:** IMG_7300
> good news! obsidian is now free for commercial use!
> 
> IMG_7300
> 
> [
> 
> 
> ](https://files.slack.com/files-pri/T0181S17H6Z-F08E8BQ0GPL/img_7300.png)
> 
> ![:bufo-wow:](https://emoji.slack-edge.com/T0181S17H6Z/bufo-wow/b6ec3fdfceb99b54.png)17![:obsidian-intensifies:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-intensifies/94bc5d4d9a5c06e8.gif)14![:obsidian-gemmy:](https://emoji.slack-edge.com/T0181S17H6Z/obsidian-gemmy/d965a674bea5185f.png)1

> [!slack]+ Message from Unknown User
> **Time:** 
> +1
> 
> 16 replies
> 
> Last reply today at 8:25 AMView thread"
`;
